--- a/index.html
+++ b/index.html
@@ -46,6 +46,26 @@
             <section class="player">
                 <img src="images/image-sample.jpg" alt="Picture of Christian McCaffrey">
                 <p>Christian McCaffrey 70.0 Rushing Yards</p>
+            </section> 
+            <section class="player">
+                <img src="images/image-sample.jpg" alt="Picture of Christian McCaffrey">
+                <p>Christian McCaffrey 70.0 Rushing Yards</p>
+            </section> 
+            <section class="player">
+                <img src="images/image-sample.jpg" alt="Picture of Cj Stround"
+                <p>Cj Stround 237.5 Passing Yards</p>
+            </section> 
+            <section class="player">
+                <img src="images/image-sample.jpg" alt=" Picture of Aaron Rodgers"
+                <p>Aaron Rodgers 220.5 Passing Yards</p>
+            </section> 
+            <section class="player">
+                <img src="images/image-sample.jpg" alt="Picture of Derrick Henry"
+                <p>Derrick Henry 46.5 Rushing Yards</p>
+            </section> 
+            <section class="player">
+                <img src="images/image-sample.jpg" alt="Picture of Matthew Stafford" 
+                <p>Matthew Stafford 215.5 Passing Yards</p>
             </section>
         </div>
     </main>
